--- a/ecrc-procs/ref.bib
+++ b/ecrc-procs/ref.bib
@@ -471,3 +471,12 @@ information).
 				  year={1998},
 				    publisher={Elsevier}
 }
+@article{srivastava2014dropout,
+	  title={Dropout: a simple way to prevent neural networks from overfitting.},
+	    author={Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+		  journal={Journal of Machine Learning Research},
+		    volume={15},
+			  number={1},
+			    pages={1929--1958},
+				  year={2014}
+}
