--- a/ecrc-procs/hybrid_learning_net.tex
+++ b/ecrc-procs/hybrid_learning_net.tex
@@ -1074,7 +1074,13 @@ the biases:
 	t=1,2,\cdots
 	\label{eq:31}
 \end{equation}
-
+Thus we can iterate along layers with 
+equation~(\ref{eq:21}-\ref{eq:31}) to 
+update all parameters of the supervised 
+training, and the equations corresponding 
+tothe unsupervised training refer 
+directly to equation~(\ref{eq:8}) and 
+(\ref{eq:9}).
 \section{Empirical Study}
 To test our architecture performance on small data, we 
 use a synthetic dataset containing $3.5\%$ noisy samples. 
